--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,50 @@
 .App {
   text-align: center;
+  margin: auto;
+}
+
+ul{
+  text-decoration: none;
+  padding: 0px;
 }
 
 .search{
   display: block;
-  border: 1px solid black;
-  max-width: 20%;
+  background-color: #253551;
+  color: #e0e0db;
+  border-radius: 5px;
+  max-width: 25%;
   margin: auto;
   padding: 1%;
 }
 
 .searchtext{
-  font-size: small;
+  font-size: large;
   margin-top: 0%;
+}
+
+.resources{
+  background-color: #e0e0db;
+  border-radius: 5px;
+  padding: 5px 15px 5px 15px;
+  max-width: 80%;
+  margin: 15px auto;
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #253551;
+  color: #253551;
+  height: 100px;
+  padding-bottom: 10px;
+  width: 35%;
+  margin: 10% auto 1%;
+}
+#bridge{
+  color: #253551;
 }
 
 
