resolved build error in dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,8 @@ ul{
   transition: filter 300ms;
 }
 .icon-button:hover{
-  filter: brightness(1.2)
+  filter: brightness(1.2);
+  cursor: pointer;
 }
 
 .dropdown{
