--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,7 @@ ul{
   margin: 5px;
 }
 
+/* Loader css */
 .loaderbod{
   padding-top: 50px;
   display: flex;
@@ -147,6 +148,7 @@ ul{
 #ten{
   animation-delay: calc(1s)
 }
+/* There has to be a better way to write this ^ */
 
 @keyframes animate{
   0%{
